Update travis yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,16 @@ language: cpp
 sudo: required
 compiler: gcc
 os: linux
-before install:
+install:
 - sudo apt-get install libncurses5-dev
 - touch test-config
+- cd policies
 - |
-  for policy in policies/*.cpp; do
-    echo "$policy 32 32 1" >> test-config
+  for policy in *.cpp; do
+    policy = "echo $policy | cut -d'.' -f 1"
+    echo "$policy 32 32 1" >> ../test-config
   done
+- cd ../
+- cat test-config
 script:
-- ARGS=$(ls policies | grep .cpp | awk -F . '{print "-D" $1}' | tr '\r\n' ' ')
-- FILES=$(ls policies | grep .cpp | tr '\r\n' ' ')
-- make G++FLAGS="$ARGS" POLICY_FILES="$FILES"
-- gzip -dc sample.out.gz | ./cache.exe test-config
+- ./run.sh -c test-config -t sample.out.gz -i
