--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 dist: xenial
 language: cpp
 sudo: required
-compiler: gcc -std=c++11
+compiler: g++
 os: linux
 install:
 - sudo apt-get install libncurses5-dev
