--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ install:
 - touch test-config
 - cd policies
 - |
+  echo "$(ls | grep .cpp -c)" >> ../test-config
   for policy in *.cpp; do
     policy="$(echo $policy | cut -d'.' -f 1)"
     echo "$policy 32 32 1" >> ../test-config
